--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "dependencies": {
-    "@dotenvx/dotenvx": "^1.39.1",
-    "express": "^5.1.0",
-    "mongodb": "6.15",
-    "valibot": "^1.0.0"
-  },
-  "name": "grouptivate-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.14.0",
-    "typescript": "^5.8.3"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "dev": "dotenvx run -- npx tsx index.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AAU-SW8-FASABA/Grouptivate-Server.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "type": "module",
-  "bugs": {
-    "url": "https://github.com/AAU-SW8-FASABA/Grouptivate-Server/issues"
-  },
-  "homepage": "https://github.com/AAU-SW8-FASABA/Grouptivate-Server#readme"
+    "dependencies": {
+        "@dotenvx/dotenvx": "^1.39.1",
+        "express": "^5.1.0",
+        "mongodb": "6.15",
+        "valibot": "^1.0.0"
+    },
+    "name": "grouptivate-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.ts",
+    "devDependencies": {
+        "@types/express": "^5.0.1",
+        "@types/node": "^22.14.0",
+        "prettier": "^3.5.3",
+        "typescript": "^5.8.3"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "npx tsc",
+        "dev": "dotenvx run -- npx tsx index.ts",
+        "format": "prettier --ignore-path .gitignore --write \"./\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AAU-SW8-FASABA/Grouptivate-Server.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "type": "module",
+    "bugs": {
+        "url": "https://github.com/AAU-SW8-FASABA/Grouptivate-Server/issues"
+    },
+    "homepage": "https://github.com/AAU-SW8-FASABA/Grouptivate-Server#readme"
 }
