--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.1",
 		"@types/node": "^22.14.0",
+		"@types/node-cron": "^3.0.11",
 		"mongodb-memory-server": "^10.1.4",
 		"prettier": "^3.5.3",
 		"tsx": "^4.19.3",
