--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 	"license": "MIT",
 	"scripts": {
 		"test": "tsx --test --test-concurrency=1 test/*.test.ts",
-		"prod": "dotenvx run -- npx tsx index.ts",
-		"dev": "dotenvx run -- npx tsx index.ts",
+		"server": "dotenvx run -- npx tsx index.ts",
 		"format": "prettier --ignore-path .gitignore --write \"./\""
 	},
 	"devDependencies": {
@@ -18,6 +17,7 @@
 		"@types/express": "^5.0.1",
 		"@types/node": "^22.14.0",
 		"@types/node-cron": "^3.0.11",
+		"@types/yargs": "^17.0.33",
 		"mongodb-memory-server": "^10.1.4",
 		"prettier": "^3.5.3",
 		"tsx": "^4.19.3",
@@ -31,7 +31,8 @@
 		"mongodb": "6.15",
 		"mongoose": "^8.13.2",
 		"node-cron": "^3.0.3",
-		"valibot": "^1.0.0"
+		"valibot": "^1.0.0",
+		"yargs": "^17.7.2"
 	},
 	"repository": {
 		"type": "git",
