--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"mongoose": "^8.13.2",
 		"node-cron": "^3.0.3",
 		"valibot": "^1.0.0",
+		"winston": "^3.17.0",
 		"yargs": "^17.7.2"
 	},
 	"repository": {
